syntax = "proto3";
package brokerageApi;
option go_package = "github.com/mrNobody95/Gate/services/brokerage/api";
import "api/src/misc.proto";

service BrokerageService {
  rpc Add(Brokerage) returns (Brokerage);
  rpc Get(BrokerageIDReq) returns (GetBrokerage);
  rpc Delete(BrokerageIDReq) returns (api.Void);
  rpc ChangeStatus(BrokerageStatusChangeRequest) returns (BrokerageStatus);
}

enum Names {
  UnknownBrokerage = 0;
  Coinex = 1;
}

enum Status {
  UnknownStatus = 0;
  Enable = 1;
  Disable = 2 ;
}

message Brokerage {
  // @inject_tag: json:"id"
  string ID = 1;
  // @inject_tag: json:"auth"
  api.Auth Auth = 2;
  // @inject_tag: json:"name"
  Names Name = 3;
  // @inject_tag: json:"status"
  Status Status = 4;
}

message GetBrokerage {
  // @inject_tag: json:"id"
  string ID = 1;
  // @inject_tag: json:"auth_type"
  string AuthType = 2;
  // @inject_tag: json:"name"
  string Name = 3;
  // @inject_tag: json:"status"
  string Status = 4;
}

message BrokerageIDReq {
  // @inject_tag: json:"id"
  string ID = 1;
}

message BrokerageStatusChangeRequest {
  // @inject_tag: json:"id"
  string ID = 1;
}

message BrokerageStatus {
  // @inject_tag: json:"status"
  Status Status = 1;
}


